--- a/foo-thesis.tex
+++ b/foo-thesis.tex
@@ -42,6 +42,7 @@
 \usepackage{enumitem}
 \usepackage{cleveref}
 \usepackage{tabulary}
+\usepackage{bm}
 \setlist{itemsep=2pt,parsep=2pt}
 % \setlist{topsep=0px,partopsep=0px}
 % \setlist{nolistsep}
@@ -171,10 +172,14 @@
 \subsubsection{misc}
 
 \todo[inline]{cleanup repository. rebase and cut the first unrelated commits out? decide on repository name, and maybe github name.}
-\todo[inline,color=green]{at least two subsections per section}
+\todo[inline]{at least two subsections per section}
 \todo[inline,color=green]{no forward references}
 \todo[inline]{brighter version for print}
 \todo[inline]{cleanup references}
+\todo[inline]{noindent after figures}
+\todo[inline]{latex warnings}
+\todo[inline]{esp. overflows}
+\todo[inline]{orphans and widows, also single words on a line}
 
 
 % \include{chap-examples}
