--- a/chap-results.tex
+++ b/chap-results.tex
@@ -122,7 +122,7 @@ This section presents the results for visibility testing using imperfect shadow 
     \includegraphics[width=.48\textwidth]{screenshots/ism_splat_cropped} &
     \includegraphics[width=.48\textwidth]{screenshots/ism_single_pixel_cropped}
   \end{tabular}
-  \caption{ISMs rendered using the splat renderer (left) and single-pixel renderer (right) with default settings. The single-pixel renderer performs interpolation between points, uses more points and does not let points ``bleed'' into neighboring ISMs, but takes more time.}
+  \caption{ISMs rendered using the splat renderer (left) and single-pixel renderer (right) with default settings. The single-pixel renderer performs interpolation between points, uses more points and does not let points bleed into neighboring ISMs, but takes more time.}
   \label{fig:results:isms}
 \end{figure}
 
@@ -306,7 +306,7 @@ The San Miguel scene is a good example for this: While the small detail work lik
 
 
 
-\section{Interleaved Sampling with Compute Shaders}
+\section{Interleaved Sampling using Compute Shaders}
 \label{sec:results:interleavedShading}
 
 Interleaved sampling substantially reduces the number of lights that are processed per pixel. Using a 4x4 interleaving pattern, each pixel processes only a sixteenth of all lights, ideally speeding up the final gathering phase by a factor of 16. However, an additional blur pass is required to mask the noise that results from interleaving, which takes additional time.
